--- a/index.html
+++ b/index.html
@@ -15,15 +15,104 @@
     </div>
     <div class="list1">
       <ul>
-        <ul >
-           <li class="dropdown-button" >Feautures</li>
-           <li class="dropdown-button" >Plans</li>
-           <li class="dropdown-button" >About Us</li>
-          <li class="dropdown-button" >Help</li>
-         <li class="dropdown-button" >Business</li>
+        <li>
+           <div class="dropdown-menu" >
+           <ul >
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+           </ul>
+          </div></li>
       </ul>
+      <ul>
+        <li>
+           <div class="dropdown-menu" >
+           <ul >
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+           </ul>
+          </div></li>
+      </ul>
+      <ul>
+        <li>
+           <div class="dropdown-menu" >
+           <ul >
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+           </ul>
+          </div></li>
+      </ul>
+      <ul>
+        <li>
+           <div class="dropdown-menu" >
+           <ul >
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+           </ul>
+          </div></li>
+      </ul>
+      <ul>
+        <li>
+           <div class="dropdown-menu" >
+           <ul >
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+             <li>Account</li>
+             <li>ricerca</li>
+           </ul>
+          </div></li>
+      </ul>
+
+
     </div>
-  
+
     <div class="list3">
       <ul>
         <ul>Sign In</ul>
