--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -12,7 +12,91 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- /google fonts -->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Typo */
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+
+    /* Buttons */
+    .btn {
+      border-radius: 10px;
+      margin: 0 10px;
+    }
+    a.btn.btn-primary {
+      background-color: #ddd;
+      color: #000;
+    }
+    a.btn.btn-secondary {
+      background-color: #000;
+      color: #fff;
+    }
+
+    header {
+      margin-top: 70px;
+    }
+    .logo {
+      width: 30px;
+    }
+    /* Main Menu */
+    .main-menu {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .main-menu .main-menu-list {
+      display: flex;
+      list-style: none;
+      align-items: center;
+    }
+    .main-menu a {
+      color: #777;
+      text-decoration: none;
+    }
+
+    .main-menu .main-menu-list > li > a {
+      padding: 10px 25px;
+    }
+    .main-menu .main-menu-list > li {
+      position: relative;
+    }
+    .main-menu-left .main-menu-list > li:nth-child(2) > a {
+      color: #000;
+    }
+
+    .main-menu-dropdown-container {
+      padding-top: 10px;
+      display: none;
+      position: absolute;
+      left: 0;
+      top: 100%;
+    }
+    .main-menu .main-menu-dropdown {
+      white-space: nowrap;
+      list-style: none;
+      padding: 15px 10px;
+      border-radius: 10px;
+      box-shadow: rgb(0 0 0 / 4%) 0px 0px 4px 0px, rgb(0 0 0 / 8%) 0px 8px 16px 0px;
+    }
+    .main-menu .main-menu-dropdown li a {
+      display: inline-block;
+      padding: 10px 0;
+    }
+
+    .main-menu-dropdown-container.active {
+      display: block;
+    }
+
+    </style>
   </head>
   <body>
 
@@ -22,7 +106,7 @@
         <nav class="main-menu-left">
           <ul class="main-menu-list">
             <li><a href="#"><img class="logo" src="img/logo_revolut_cut.png" alt="Logo"></a></li>
-            <li><a href="#">Personale</a></li>
+
             <li><a href="#">Business</a></li>
           </ul>
         </nav>
@@ -44,7 +128,7 @@
               </div>
             </li>
             <li>
-              <a href="#">Chi Siamo</a>
+              <a href="#">Siamo</a>
               <div class="main-menu-dropdown-container">
                 <ul class="main-menu-dropdown">
                   <li><a href="#">Standard</a></li>
@@ -57,13 +141,54 @@
             </li>
             <li><a href="#">Aiuto</a></li>
             <li><a class="btn btn-primary" href="#">Accedi</a></li>
-            <li><a class="btn btn-secondary" href="#">Scarica l'app</a></li>
+
           </ul>
         </nav>
         <!-- /menu right -->
       </div>
     </header>
 
-  <script src="js/script.js" charset="utf-8"></script>
+  <!-- <script src="js/script.js" charset="utf-8"></script> -->
+  <script type="text/javascript">
+  $(function() {
+    // Modo 1 - all'hover usando i metodi jquery
+    // $('.main-menu-list > li').mouseenter(
+    //   function() {
+    //     $(this).children('.main-menu-dropdown-container').slideDown();
+    //   }
+    // );
+    //
+    // $('.main-menu-list > li').mouseleave(
+    //   function() {
+    //     $(this).children('.main-menu-dropdown-container').slideUp();
+    //   }
+    // );
+
+    // Modo 2 - all'hover aggiugendo la classe
+    $('.main-menu-list > li').mouseenter(
+      function() {
+        //$(this).siblings('li').children('.main-menu-dropdown-container').removeClass('active');
+        $('.main-menu-dropdown-container').removeClass('active');
+        $(this).children('.main-menu-dropdown-container').addClass('active');
+      }
+    );
+
+    // $('.main-menu-list > li').mouseleave(
+    //   function() {
+    //     $(this).children('.main-menu-dropdown-container').removeClass('active');
+    //   }
+    // );
+
+    // Modo 3 - col click e il toggle sulla classe
+    $('.main-menu-list > li').click(
+      function() {
+        $(this).children('.main-menu-dropdown-container').toggleClass('active');
+      }
+    );
+
+
+  });
+
+  </script>
   </body>
-</html>
+</html> -->
